# ParsPack-Interview-Task

./: .env.sample  DESIGN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 15991c11fe04_added_users_table.py  362625c8082c_added_processing_at_column.py  6ad03784b4b9_added_jobs_table.py  875e87b0fb59_init.py  accb6bcad9c8_init.py  feff0659442f_added_processing_error_column.py
src/core/config/: __init__.py  settings.py
src/core/config/schemas/: __init__.py  auth.py  fastapi.py  jwt.py  postgresql.py  schedular.py  worker_pool.py
src/core/setup/: __init__.py  app.py  exception_handler.py  init_app.py  lifespan.py  logger.py  routers.py
src/modules/auth/: types.py
src/modules/auth/entrypoint/: __init__.py
src/modules/auth/infra/: __init__.py  db_models.py  jwt.py  password_encryptor.py  repository.py
src/modules/auth/services/: __init__.py  auth.py  interfaces.py  use_cases.py
src/modules/jobs/: types.py
src/modules/jobs/domain/: models.py
src/modules/jobs/entrypoint/: __init__.py
src/modules/jobs/infra/: __init__.py  db_models.py  repository.py
src/modules/jobs/services/: __init__.py  interfaces.py  jobs.py  schedular.py  scheduler.py  worker.py  (+2 more)
src/shared/const/: __init__.py  db_lock.py  domain_error.py  environment.py
src/shared/entrypoint/: __init__.py  dependencies.py  error_mapper.py  http_exception.py  http_exceptions.py  http_response.py
src/shared/infra/: __init__.py  db_metadata.py
src/shared/service/: __init__.py  error.py
src/shared/utils/: __init__.py  stripped_str.py
tests/: conftest.py
tests/auth/: test_e2e.py
tests/jobs/: test_e2e.py  test_schedular.py  test_units.py
(+10 files in other folders)
