[project]
name = "parspack-interview-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioclock>=0.3.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.1",
    "python-json-logger>=4.1.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "types-passlib>=1.7.7.20260211",
    "uuid6>=2025.0.1",
    "uvicorn>=0.50.0",
    "testcontainers[keycloak,postgresql]>=4.14.2",
    "httpx>=0.28.1",
]


[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
warn_untyped_defs = true
